# ArBilliards

./: .gitignore  .gitmodules  README.md
Docs/Old/Misc/: Diag.drawio
Docs/Old/Report/Improvements/200921-Simulation/: __content.md
Docs/Old/Report/RecognitionImplLog/: __content.md
Docs/Report/Improvements/200922-Recognition/: __content.md
Docs/Report/Log/: __content.md
Docs/Report/Recognition/: __content.md
Docs/Report/Roadmap/: __content.md
Docs/report/: AR당구-3안.docx  AR당구-4안.docx  AR당구-5안-short.docx  AR당구-5안.docx  AR당구-6안-최종-입력전-2.docx  AR당구-답변-2.docx  content copy.tex  content-2.tex  content.bib  content.tex  recognition.tex  word(20Oct2020).docx
Docs/report/script/: optain-hsv.py  spectrum.py
Projects/CoreModel/: .editorconfig  .gitignore  CMakeLists.txt  CMakeSettings.json  TODO.md  arbilliards-autosave.json
Projects/CoreModel/PhysicsCore/: CMakeLists.txt
Projects/CoreModel/PhysicsCore/sample/: sampleapp.cpp
Projects/CoreModel/PyPhsicsCore/: requirements.txt
Projects/CoreModel/PyPhsicsCore/src/: billiardsim.py  hello.py  test.py
Projects/CoreModel/PyPhsicsCore/tests/: bullet-hello.py
Projects/CoreModel/Recognition/: .clang-format  .editorconfig  CMakeLists.txt
Projects/CoreModel/Recognition/config/: arbilliards-autosave.json  config-backup.json  config-dadam-size.json  config-daytime-indoor-FOV-fix.json  config-daytime-indoor.json  config-night-indoor-light.json  dadam-config.json  pipepp-new-10-marker-improve.json  pipepp-new-11-marker-improve.json  pipepp-new-12.json  pipepp-new-13.json  pipepp-new-14.json  pipepp-new-15.json  pipepp-new-16.json  pipepp-new-17.json  pipepp-new-18.json  pipepp-new-19.json  pipepp-new-2.json  pipepp-new-3.json  pipepp-new-4.json  pipepp-new-5.json  pipepp-new-6-all-ball-configs.json  pipepp-new-7.json  pipepp-new-8.json  pipepp-new-9-marker-improve.json  pipepp-new.json
Projects/CoreModel/Recognition/example/: entry.cpp
Projects/CoreModel/Recognition/exec/: entry.cpp
Projects/CoreModel/Recognition/include/: app.hpp  json_recv_socket.hpp  recognition.hpp  tcp_server.hpp
Projects/CoreModel/Recognition/src/: amp.cpp  app.cpp  entry.cpp  entry_DEPRECATED.cpp  entry_DEPRECATED.cpp.x  entry_DEPRECATED_2.cpp  image_processing.cpp  image_processing.hpp  json_recv_socket.cpp  recognition.cpp  recognition.hpp  recognition_impl.cpp  recognition_impl.hpp  recognition_ui.cpp  tcp_server.cpp  tcp_server.hpp  templates.hxx  thread_pool.hxx
Projects/CoreModel/Recognition/src/amp-math/: helper.hxx
Projects/CoreModel/Recognition/src/pipes/: balls.cpp  balls.hpp  helpers.cpp  helpers.hpp  input.hpp  marker.cpp  marker.hpp  recognizer.cpp  recognizer.hpp  shared_data.hpp  table_search.cpp  table_search.hpp  traditional.cpp  traditional.hpp
Projects/CoreModel/Recognition/third/nlohmann/include/nlohmann/: json.hpp
Projects/CoreModel/enc_temp_folder/1fe8f8b0d1c222cb2697a09852e610/: recognition.cpp
Projects/CoreModel/enc_temp_folder/2894ee913d893aaa36491a11dcf029ea/: trivial.hxx
Projects/CoreModel/enc_temp_folder/6fe2155eb647d3873c979134f4b9eda/: entry.cpp
Projects/CoreModel/enc_temp_folder/7cdb33e2ef8879c57df50621fd835e6/: entry.cpp
Projects/CoreModel/script/: aruco.py  generate_marker_position.py  test.py
Projects/CoreModel/tests/: tt.ipynb
Projects/Recognition/: CMakeLists.txt  CMakeSettings.json  Recognition.cpp  Recognition.h
Projects/Recognition/src/: entry.cpp  recognition.hpp  thread_pool.hxx
Projects/UnityAr/Assets/ArBilliards/Materials/: Ball_Orange.mat  Ball_RED.mat  Ball_White.mat  MarkerTransMat.mat  TablePane.mat  TransMatBase.mat  Trans_Table.mat
Projects/UnityAr/Assets/ArBilliards/Prefab/: BilliardsManager.prefab  CandidateMarker.prefab  CollisionMarker.prefab  PathFollowMarker.prefab  Plane.prefab  Sphere.prefab
Projects/UnityAr/Assets/ArBilliards/Scripts/: BilliardsSimulation.cs  BilliardsSimulationTest.cs  CollisionMarkerManipulator.cs  JsonIPC.cs  MarkerManipulator.cs  Phys.cs  RecognitionHandler.cs  SimHandler.cs
Projects/UnityAr/Assets/ArBilliards/Scripts/Test/: BilliardsSimulationTest.cs  JsonIPC.cs
Projects/UnityAr/Assets/Oculus/SampleFramework/Usage/HandsTrainExample/Materials/: SelectionCylinder.mat  XingLightMaterial.mat
Projects/UnityAr/Assets/Scenes/: BilliardsPhysSim.unity  Menu 3D.unity  RecogntionMainScene.unity  SampleScene.unity
Projects/UnityAr/Assets/Scripts/: Billboard.cs  PositionCorrector.cs  UI_Count.cs  UI_Sel.cs
Projects/UnityAr/Assets/Tools/SampleUI/Models/Materials/: vehicle_rcFlyer_dome_mat.mat
Projects/UnityAr/Assets/XR/: XRGeneralSettings.asset
Projects/UnityAr/Assets/ZED/Examples/Drone Shooter/Resources/Muzzleflash_FX/: WFX_M_MF FrontRear RIFLE3.mat
Projects/UnityAr/Assets/ZED/Prefabs/: ZED_Rig_Stereo.prefab
Projects/UnityAr/Assets/ZED/SDK/Helpers/Resources/Materials/Lighting/: Mat_ZED_Forward_Lighting.mat
Projects/UnityAr/Assets/ZED/SDK/Helpers/Shaders/Lighting/: ZED_Forward_Lighting.shader
Projects/UnityAr/Assets/ZED/Tools/Mixed Reality Calibration/Materials/: White_Letters.mat  Yellow.mat
Projects/UnityAr/Assets/ZED/Tools/Mixed Reality Calibration/Models/Materials/: White Letters.mat
Projects/UnityAr/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
