# CMakeList.txt : CMake project for Recognition, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("Recognition")

# Add source to this project's executable.
add_executable (Recognition "Recognition.cpp" "Recognition.h")

# TODO: Add tests and install targets if needed.
